--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <option value="1.6">Średnia aktywność / praca mieszana</option>
                     <option value="1.7">Średnia aktywność / lekka praca fizyczna</option>
                     <option value="1.8">Wysoka aktywność / praca fizyczna</option>
-                    <option value="1.9">Wysoka aktywność / ciężka praca fizyczna</option>
+                    <option value="1.8">Wysoka aktywność / ciężka praca fizyczna</option>
                     <option value="2">Wysoka aktywność (codzienne treningi)</option>
                     <option value="2.2">Bardzo wysoka aktywność (codzienne ciężkie treningi)</option>
                 </select>
@@ -69,8 +69,18 @@
                     </div>
                 </div>
                 <button id="calculateGoal">Oblicz cel</button>
+                <div id="mealCount" style="display:none;">
+                    <label for="meals">Liczba posiłków dziennie:</label>
+                    <select id="meals" name="meals">
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                    <button id="calculateMeals">Oblicz rozkład posiłków</button>
+                </div>
             </div>
             <div id="finalCalorieResult"></div>
+            <div id="mealDistribution"></div>
         </section>
     </main>
     <footer>
