--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <option value="1.6">Średnia aktywność / praca mieszana</option>
                     <option value="1.7">Średnia aktywność / lekka praca fizyczna</option>
                     <option value="1.8">Wysoka aktywność / praca fizyczna</option>
-                    <option value="1.8">Wysoka aktywność / ciężka praca fizyczna</option>
+                    <option value="1.9">Wysoka aktywność / ciężka praca fizyczna</option>
                     <option value="2">Wysoka aktywność (codzienne treningi)</option>
                     <option value="2.2">Bardzo wysoka aktywność (codzienne ciężkie treningi)</option>
                 </select>
@@ -81,12 +81,15 @@
             </div>
             <div id="finalCalorieResult"></div>
             <div id="mealDistribution"></div>
+            
         </section>
+        <button id="downloadExcel" style="display: none;">Pobierz dane w formacie Excel</button>
     </main>
     <footer>
         <p>&copy; Jakub Dzioba - Strona Dietetyczna Kalkulator Energetyczny</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
 </body>
 </html>
